fixed book index shift bug, implemented remove book and toggle isRead buttons, refactored buildBookCard()

--- a/style.css
+++ b/style.css
@@ -4,17 +4,21 @@
     box-sizing: border-box;
 }
 
+:root {
+    --button-green: rgb(0, 104, 22);
+}
+
 body {
     height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: Roboto;
-    background-color: rgb(23, 32, 78);
+    background-image: linear-gradient(rgb(235, 235, 235), rgb(139, 125, 125));
 }
 
 .header {
     font-size: 1.5rem;
-    color: white;
+    color: rgb(75, 75, 75);
     height: 90px;
     width: fit-content;
     margin: 0 auto;
@@ -31,7 +35,7 @@ body {
 .book-card {
     height: 250px;
     width: 180px;
-    background-image: linear-gradient(rgb(255, 244, 208), rgb(201, 151, 122));
+    background-image: linear-gradient(rgb(182, 144, 108), rgb(131, 87, 62));
     border: 1px solid rgb(48, 24, 9);
     padding: 25px;
     position: relative;
@@ -58,11 +62,24 @@ body {
     top: 5px;
 }
 
+.is-read-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.is-read-toggle {
+    outline: none;
+}
+
+input[type="checkbox"]:checked {
+    accent-color: var(--button-green);
+}
+
 #add-book-button {
     width: fit-content;
     margin: auto;
     padding: 15px;
-    background-color: rgb(0, 141, 31);
+    background-color: var(--button-green);
     color: white;
     border: none;
     border-radius: 30px;
@@ -78,7 +95,7 @@ button:hover {
 }
 
 #add-book-button:active {
-    background-color: rgb(0, 104, 22);
+    filter: brightness(70%);
 }
 
 #add-book-dialog {
